@@ -2,6 +2,13 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*lh-sources-3.5.0 (24 Jul 2012)
+
+  24 Jul 2012; Justin Lecher <jlec@gentoo.org> -lh-sources-3.4.0.ebuild,
+  -lh-sources-3.4.2.ebuild, -lh-sources-3.4.2-r1.ebuild,
+  -lh-sources-3.4.3.ebuild, -lh-sources-3.4.4.ebuild, +lh-sources-3.5.0.ebuild:
+  Version Bump
+
   18 Jul 2012; Justin Lecher <jlec@gentoo.org> lh-sources-3.4.5.ebuild:
   Fix pathcset version
 
